# openstint-transponder

./: .gitignore  README.md  kikit-panel-config.json
.github/workflows/: nightly.yml
avr-firmware/: Makefile  README.md  main.c
docs/: .gitignore  antenna-tuning.asc  antenna2.asc  coupled-antenna-v1.asc  pushpull-filter.asc  pushpull.asc  resonant-transmitter-an138-v2.asc
firmware/: CMakeLists.txt  main.c
firmware/cmake/: README.md
hardware/: .gitignore  openstint-transponder.kicad_pcb  openstint-transponder.kicad_prl  openstint-transponder.kicad_pro  openstint-transponder.kicad_sch  symbols.kicad_sym
hardware/footprints.pretty/: ACM2012.kicad_mod  openstint-logo_10x10.kicad_mod  openstint-logo_12x12.kicad_mod
